{
  "@@locale": "en",

  "appTitle": "DearDays",

  "settings": "Settings",
  "editProfile": "Edit Profile",
  "account": "ACCOUNT",
  "email": "Email",
  "password": "Password",
  "subscription": "Subscription",
  "manage": "Manage",

  "journaling": "MEMORIES",
  "dailyReminder": "Daily Reminder",
  "dailyReminderSet": "Daily reminder set for {time}",
  "@dailyReminderSet": {
...
