...
    'Reflection',
    'Growth',
    'Health',
    'Friends',
    'Food',
    'Nature',
    'Adventure',
    'Gratitude',
    'Love',
    'Milestone',
    'Creativity',
  ];

...
